fix: responsive css - searchbar always shown at medium width

--- a/onYOURway/App/_styles/_onYOURway.less
+++ b/onYOURway/App/_styles/_onYOURway.less
@@ -634,6 +634,13 @@ nav .dropdown-toggle:hover:after {
   height: 30px;
 }
 
+@media (max-width: 991px) { /* xs & sm */
+  #searchbar {
+  	top: -714px;
+  }
+}
+/* xs & sm */
+
 /*#endregion searchbar*/
 
 /*#region controls */
