--- a/onYOURway/App/_styles/_onYOURway.css
+++ b/onYOURway/App/_styles/_onYOURway.css
@@ -579,6 +579,13 @@ nav .dropdown-toggle:hover:after {
   width: 120px;*/
   height: 30px;
 }
+@media (max-width: 991px) {
+  /* xs & sm */
+  #searchbar {
+    top: -714px;
+  }
+}
+/* xs & sm */
 /*#endregion searchbar*/
 /*#region controls */
 /*.loader {
