add: locationWizard (started)

--- a/onYOURway/App/views/my/profile.html
+++ b/onYOURway/App/views/my/profile.html
@@ -182,37 +182,42 @@
         </div>
       </article>
 
-      <article id="neu" class="OWL-carousel slide no-padding" data-bind="click: nextStep" style="cursor: pointer;">
+      <article id="neu" class="OWL-carousel slide no-padding" style="cursor: pointer;">
+        
+        <a href="#/my/wizardNew" class="btn btn-success">Assistent starten</a>
 
+        <!--
+      data-bind="click: nextStep" 
+        
         <div class="sub" id="step1">
-          <h2>Neuer Standort</h2>
-          <p>Langer Einleitungstext hier... Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...</p>
-        </div>
-        <div class="sub" id="step2">
-          <h2>Name und Beschreibung</h2>
+      <h2>Neuer Standort</h2>
+      <p>Langer Einleitungstext hier... Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...Langer Einleitungstext hier...</p>
+    </div>
+    <div class="sub" id="step2">
+      <h2>Name und Beschreibung</h2>
 
 
-        </div>
-        <div class="sub" id="step3">
-          <h2>Adresse und Position</h2>
+    </div>
+    <div class="sub" id="step3">
+      <h2>Adresse und Position</h2>
 
-        </div>
-        <div class="sub" id="step4">
-          <h2>Öffnungszeiten</h2>
+    </div>
+    <div class="sub" id="step4">
+      <h2>Öffnungszeiten</h2>
 
-        </div>
-        <div class="sub" id="step5">
-          <h2>Kennzeichen (Tags)</h2>
+    </div>
+    <div class="sub" id="step5">
+      <h2>Kennzeichen (Tags)</h2>
 
-        </div>
-        <div class="sub" id="step6">
-          <h2>Speichern</h2>
+    </div>
+    <div class="sub" id="step6">
+      <h2>Speichern</h2>
 
-        </div>
-        <div class="sub" id="step7">
-          <h2>Bild hinzufügen</h2>
+    </div>
+    <div class="sub" id="step7">
+      <h2>Bild hinzufügen</h2>
 
-        </div>
+    </div>-->
       </article>
 
       <article id="standorte">
