--- a/onYOURway/App/views/_nav.html
+++ b/onYOURway/App/views/_nav.html
@@ -133,7 +133,7 @@
             <!-- ko if: app.user.isAuthenticated -->
             <li class="dropdown-header">Mitgliederbereich</li>
             <li><a href="#/my/profile">Übersicht</a></li>
-            <li><a href="#/my/profile/neu">Neuer Standort</a></li>
+            <li><a href="#/my/wizardNew">Neuer Standort</a></li>
             <li><a href="#/my/profile/profil">Profil</a></li>
             <li><a href="#/my/profile/einstellungen">Einstellungen</a></li>
             <li class="divider"></li>
