--- a/onYOURway/App/views/my/_locationWizard.html
+++ b/onYOURway/App/views/my/_locationWizard.html
@@ -1,66 +1,78 @@
-﻿<ul class="oyw-wizard tab-pane">
-  <li>Name</li><!--Foto, Beschreibung-->
-  <li>Kontakt</li><!--Adresse, Web, Tel-->
-  <li>Art</li>
-  <li>Branche</li>
-  <li>Produkte</li>
-  <!--speichern-->
-  <li>Öffnungszeiten</li>
-  <li>Foto</li>
-  <li>Partner</li>
-</ul>
+﻿<div role="navigation" class="oyw-content-nav col-md-3">
+  <ul class="nav nav-pills nav-stacked">
+    <li><a href="#step0">Neuer Standort</a></li>
+    <li><a href="#step1">Name & Beschreibung</a></li>
+    <li><a href="#step2"></a>K</li>
+    <li>Art</li>
+    <li>Branche</li>
+    <li>Produkte</li>
+    <!--speichern-->
+    <li>Öffnungszeiten</li>
+    <li>Foto</li>
+    <li>Partner</li>
+  </ul>
+</div>
 
-<form class="sub" id="step1">
-  <h2>Name</h2>
-  <p>Name und Beschreibung Ihres Unternehmens</p>
-  <div class="form-group">
-    <label for="inputName">Name</label>
-    <input type="text" class="form-control" id="inputName" placeholder="Tit. Vorname Nachname" />
-  </div>
-  <div class="form-group">
-    <label for="inputName">Alias-Namen</label>
-    <input type="text" class="form-control" id="inputNewAlias" placeholder="auch bekannt als" />
-    <button type="button" class="btn" />
-  </div>
-  <div class="form-group">
-    <label for="inputName">Beschreibung</label>
-    <textarea class="form-control" maxlength="500" placeholder="Was bieten Sie an (max. 500 Zeichen)?" />
-  </div>
+<form role="main" class="oyw-content-main col-md-9" data-bind="with: location">
+
+  <article id="step0">
+    <h2>Neuer Standort</h2>
+    <p>langer Einleitungstext</p>
+  </article>
+
+  <article id="step1">
+    <h2>Name</h2>
+    <p>Name und Beschreibung Ihres Unternehmens</p>
+    <div class="form-group">
+      <label for="inputName">Name</label>
+      <input type="text" class="form-control" id="inputName" placeholder="z.B. Firma" data-bind="value: Name" />
+    </div>
+    <div class="form-group">
+      <label for="inputName">Alias-Namen</label>
+      <input type="text" class="form-control" id="inputNewAlias" placeholder="auch bekannt als" />
+      <button type="button" class="btn" />
+    </div>
+    <div class="form-group">
+      <label for="inputName">Beschreibung</label>
+      <textarea class="form-control" maxlength="500" placeholder="Was bieten Sie an (max. 500 Zeichen)?" />
+    </div>
+  </article>
+  <article id="step2">
+    <h2>Art</h2>
+    <p>
+      Haben Sie ein Geschäft, betreiben eine Gewerbe oder bieten Sie privat Dienstleistungen an?
+      Welche Produkte bieten Sie an?
+    </p>
+  </article>
+  <article id="step3">
+    <h2>Kontakt</h2>
+    <p>Wie wollen Sie von Ihren Kunden erreicht werden? (Alle Angaben sind optional.)</p>
+    <div class="form-group">
+      <label for="inputName">Telefon</label>
+      <input type="text" class="form-control" id="inputName" placeholder="Tit. Vorname Nachname" />
+    </div>
+    <div class="form-group">
+      <label for="inputName">Email</label>
+      <input type="text" class="form-control" id="inputName" placeholder="Tit. Vorname Nachname" />
+    </div>
+    <!---->
+  </article>
+  <article id="step4">
+    <h2>Öffnungszeiten</h2>
+    <p>Wöchentlich fixe Öffnungszeiten? Aber vielleicht gibt es auch Ausnahmen.</p>
+  </article>
+  <article id="step5">
+    <h2>Foto</h2>
+    <p>Ein Foto ist wie eine ansprechende Auslage. Eine Einladung.</p>
+    <!--
+      crop: http://deepliquid.com/projects/Jcrop/demos.php?demo=live_crop
+      an alternative, commercial idea: http://0.s3.envato.com/files/72583218/index.html
+    -->
+
+  </article>
+  <article id="step6">
+  </article>
+  <article id="step7">
+  </article>
+
 </form>
-<div class="sub" id="step2">
-  <h2>Art</h2>
-  <p>
-    Haben Sie ein Geschäft, betreiben eine Gewerbe oder bieten Sie privat Dienstleistungen an?
-    Welche Produkte bieten Sie an?
-  </p>
-</div>
-<div class="sub" id="step3">
-  <h2>Kontakt</h2>
-  <p>Wie wollen Sie von Ihren Kunden erreicht werden? (Alle Angaben sind optional.)</p>
-  <div class="form-group">
-    <label for="inputName">Telefon</label>
-    <input type="text" class="form-control" id="inputName" placeholder="Tit. Vorname Nachname" />
-  </div>
-  <div class="form-group">
-    <label for="inputName">Email</label>
-    <input type="text" class="form-control" id="inputName" placeholder="Tit. Vorname Nachname" />
-  </div>
-  <!---->
-</div>
-<div class="sub" id="step4">
-  <h2>Öffnungszeiten</h2>
-  <p>Wöchentlich fixe Öffnungszeiten? Aber vielleicht gibt es auch Ausnahmen.</p>
-</div>
-<div class="sub" id="step5">
-  <h2>Foto</h2>
-  <p>Ein Foto ist wie eine ansprechende Auslage. Eine Einladung.</p>
-  <!--
-    crop: http://deepliquid.com/projects/Jcrop/demos.php?demo=live_crop
-    an alternative, commercial idea: http://0.s3.envato.com/files/72583218/index.html
-  -->
-
-</div>
-<div class="sub" id="step6">
-</div>
-<div class="sub" id="step7">
-</div>
