--- a/onYOURway/App/_styles/_onYOURway.less
+++ b/onYOURway/App/_styles/_onYOURway.less
@@ -344,6 +344,12 @@ form > .row {
 .no-padding {
 	padding: 0 !important;
 }
+.align-left {
+  padding-left: 0;
+}
+.align-right {
+  padding-right: 0;
+}
 
 /*#region responsive tweaks*/
 
