--- a/onYOURway/App/views/about/onyourway.html
+++ b/onYOURway/App/views/about/onyourway.html
@@ -75,7 +75,7 @@
           </a>
         </li>
         <li><a href="#video">Video</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
+        <!--<li><a href="#kontakt">Kontakt</a></li>-->
         <li><a href="#developer">Programmierer</a></li>
         <li><a href="#/about/explorer">mehr für Entdecker</a></li>
         <li><a href="#/about/venture">mehr für Anbieter</a></li>
@@ -203,7 +203,7 @@
         <iframe id="videoFrame" src="http://player.vimeo.com/video/47621875?color=ff9933" frameborder="0" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""></iframe>
       </article>
 
-      <article id="kontakt">
+      <!--<article id="kontakt">
         <h2>Kontakt</h2>
         <form role="form">
 
@@ -268,7 +268,7 @@
           </div>
 
         </form>
-      </article>
+      </article>-->
 
       <article id="developer">
         <h2>onYOURway für Programmierer</h2>
