--- a/onYOURway/App/views/about/region.html
+++ b/onYOURway/App/views/about/region.html
@@ -185,6 +185,7 @@
           <li><i class=" fa fa-fw fa-download"></i> <a href="../../../Content/documents/onYOURway - Was ist faul.pdf">Präsentation: Was ist faul mit meinem Einkaufsleben? (pdf)</a></li>
           <!--<li><a>Präsentation: What's wrong with my shoppinglife? (pdf)</a></li>-->
           <li><i class=" fa fa-fw fa-download"></i> <a href="../../../Content/documents/onYOURway%20-%20Projektinformation%20Regionalpartner.pdf">Flyer: Projektinformation für Gemeinden und Regionen (pdf)</a></li>
+          <li><i class=" fa fa-fw fa-download"></i> <a href="http://mutmacherei.net/downloads/Die%20Mutmacherei%20-%20Mut%20Vor%20Ort.pdf">Flyer der Mutmacherei: Mut vor Ort (pdf)</a></li>
         </ul>
       </article>
 
