prepare theming; fix change tiles-layer to lyrk

--- a/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
+++ b/onYOURway/App/_styles/themes/onYOURway-2/_onYOURway.css
@@ -1,7 +1,7 @@
-﻿/*colors*/
+/*colors*/
 /***************************/
 /* Boostrap overrides      */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#region jQueryUI slider*/
 .ui-slider {
   background: none;
   background-color: #f0f0f0;
@@ -75,8 +75,8 @@
 		overflow: visible;
 	}
 */
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion jQueryUI slider (fix)*/
+/*#region theme */
 .gender {
   opacity: 0.5;
 }
@@ -212,8 +212,8 @@ ol {
   border-bottom: 3px solid #fba21c;
   margin-bottom: 10px;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion theme */
+/*#region layout */
 /*body.slide-active {
 	overflow-x: hidden;
 }
@@ -330,7 +330,7 @@ form > .row {
 .align-right {
   padding-right: 0;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#region responsive tweaks*/
 /* un fix the navbar when active so that all the menu items are accessible */
 /*.navbar.navbar-fixed-top.slide-active {
 	position: relative;
@@ -404,9 +404,9 @@ form > .row {
   /* lg */
 }
 /* lg */
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion responsive tweaks*/
+/*#endregion layout */
+/*#region nav */
 .navbar {
   border-top: none;
   border-bottom: 1px solid #f1f1f1;
@@ -545,8 +545,8 @@ nav .dropdown-toggle:hover:after {
     left: 92%;
   }
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion nav */
+/*#region searchbar*/
 #searchbar {
   position: absolute;
   z-index: 999;
@@ -592,8 +592,8 @@ nav .dropdown-toggle:hover:after {
   }
 }
 /* xs & sm */
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion searchbar*/
+/*#region controls */
 /*.loader {
 	z-index: 200;
 	visibility: hidden;
@@ -677,8 +677,8 @@ nav .dropdown-toggle:hover:after {
   position: absolute;
   margin-left: -0.5em;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion controls */
+/*#region map*/
 #map {
   position: absolute;
   top: 50px;
@@ -715,8 +715,8 @@ path.oyw-map-pointer {
   border-radius: 5px;
   border-width: 2px !important;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion map*/
+/*#region locationList */
 #locationList {
   display: none;
   position: absolute;
@@ -833,8 +833,8 @@ path.oyw-map-pointer {
     width: 100%;
   }
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion locationList */
+/*#region locationDetails*/
 #ventureDetails {
   display: none;
   position: absolute;
@@ -912,8 +912,8 @@ path.oyw-map-pointer {
     width: 100%;
   }
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion locationDetails*/
+/*#region shopping list*/
 .oyw-bg-overlay {
   position: absolute;
   top: 0;
@@ -935,13 +935,13 @@ path.oyw-map-pointer {
   text-decoration: line-through;
   opacity: 0.5;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion shopping list*/
+/*#region owl-carousel*/
 #idee.owl-carousel {
   overflow: hidden;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion owl-carousel*/
+/*#region media content*/
 .video-container {
   position: relative;
   padding: 30px 0 56.25% 0;
@@ -957,8 +957,8 @@ path.oyw-map-pointer {
   width: 100%;
   height: 100%;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion media content*/
+/*#region tour (introjs)*/
 .introjs-helperNumberLayer {
   position: absolute;
   top: -3px;
@@ -991,5 +991,4 @@ a.introjs-button :active {
   text-decoration: none;
   outline: none;
 }
-/*# sourceMappingURL=_onYOURway.css.map */
-/*# sourceMappingURL=_onYOURway.css.map */
+/*#endregion tour (introjs)*/
