--- a/onYOURway/Views/Home/Index.cshtml
+++ b/onYOURway/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
 
 
   @Styles.Render("~/styles")
-  @Styles.Render("~/themes")
+  @Styles.Render("~/themes/onYOURway")
 
   <!-- Browser Tweaks -->
   <script type="text/javascript">
